--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@
     text-decoration: none;
     padding: 20px 50px;
   }
-  
+
   /* Services */
   .container {
     text-align: center;
@@ -146,5 +146,46 @@
     border: 3px solid #FED136;
     padding-top: 12px;
     margin-bottom: 12px;
+  }
+  
+/* Portfolio */
+  .portfolio {
+    background-color: #F7F7F7;
+  }
+  
+  .portfolio .portfolio-row {
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex: 0 0 33.333%;
+        flex: 0 0 33.333%;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -ms-flex-pack: justify;
+        justify-content: space-between;
+    padding: 0 75px;
+  }
+  
+  .portfolio .portfolio-row .portfolio-box {
+    background-color: #FFFFFF;
+    padding-bottom: 25px;
+    margin-top: 50px;
+  }
+  
+  .portfolio .portfolio-row .portfolio-box img {
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+  }
+  
+  .portfolio .portfolio-row .portfolio-box h2 {
+    color: #333333;
+    padding-top: 10px;
+    margin-bottom: 2px;
+  }
+  
+  .portfolio .portfolio-row .portfolio-box p {
+    color: #737373;
+    font-family: "Noto Serif", serif;
+    margin-top: 0;
   }
   
